--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,16 @@
 .App {
   text-align: center;
+  margin: 20px 40px;
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
+.App h1 {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #09d3ac;
+  padding: 20px;
 }
 
-.App-link {
-  color: #09d3ac;
+.App hr {
+  margin-top: 40px;
 }
